[package]
name = "fileserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["json", "multipart"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
tower = "0.4"
tower-http = { version = "0.4", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"  # 添加这一行